<resources>
    <string name="app_name">Geeco-in</string>
    <string name="ingressos">Llista Ingressos</string>
    <string name="about">Sobre</string>
    <string name="help">Ajuda</string>
    <string name="ingresos">Ingressos</string>
    <string name="logout">Cerrar sessió</string>
    <string name="login">Inici sessió</string>
    <string name="despeses_">Despeses</string>
    <string name="objectius">Objectius</string>
    <string name="settings">Ajustes</string>
    <string name="profile">Perfil</string>
    <string name="opcions">Opcions</string>
    <string name="nd_open">Obrir</string>
    <string name="nd_close">Tancar</string>
    <string name="question">Que vols fer:</string>
    <string name="despeses">Llista Despeses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icons_bottomFrag">Icones del fragment</string>
    <string name="infoNom">Nom o Adreça electrònica</string>
    <string name="ISboto">Iniciar Sessió</string>
    <string name="CCboto">Crear Compte</string>
    <string name="cs_warning">Has oblidat la contrasenya?</string>
    <string name="infoNomAdreca">Nom o Adreça electrònica:</string>
    <string name="infoContrassenya">Contrassenya:</string>
    <string name="infoRContrassenya">Reescriu contrassenya:</string>
    <string name="infoHint">Value</string>
    <string name="returnText">Retorna a la pàg anterior</string>
    <string name="preferencies">PREFERÈNCIES</string>
    <string name="muchotexto">Oculta els números de les despeses i els ingressos perquè ningú els vegi sense permís.</string>
    <string name="daltonisme">Daltonisme</string>
    <string name="mfosc">Mode fosc</string>
    <string name="amagardades">Amagar dades</string>
    <string name="guarda">Guardar</string>
    <string name="esborrar">Esborrar</string>
    <string name="titol">Títol:</string>
    <string name="modificar">MODIFICAR</string>
    <string name="sou_nadal">Sou de Nadal</string>
    <string name="descripcio">Descripció:</string>
    <string name="cuantitat">Quantitat:</string>
    <string name="data">Data (Format yyyy-mm-dd):</string>
    <string name="data_num">02/12/23</string>
    <string name="cuantitat_num">2305,31€</string>
    <string name="sou_nadal_doble">Sou de doble de nadal.</string>
    <string name="sortit">Sortir</string>
    <string name="resultat">Anàlisi de resultado</string>
    <string name="btnEstadistica">Veure resultats</string>
    <string name="btnGuardarStats">Guardar</string>
    <string name="btnStats">Veure chart</string>
</resources>