<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/question_sign"
            android:orderInCategory="100"
            android:title="@string/help" />
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/usericon"
            android:orderInCategory="100"
            android:title="@string/settings" />
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/opcions">
            <menu>
                <item
                    android:id="@+id/despeses"
                    android:icon="@drawable/despesesicon"
                    android:orderInCategory="100"
                    android:title="@string/despeses" />
                <item
                    android:id="@+id/ingresos"
                    android:icon="@drawable/ingressosicon"
                    android:orderInCategory="100"
                    android:title="@string/ingresos" />
            </menu>
        </item>
        <item
            android:title="@string/profile">
            <menu>
                <item
                    android:id="@+id/login"
                    android:icon="@drawable/checkicon"
                    android:orderInCategory="100"
                    android:title="@string/login" />
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/returnicon"
                    android:orderInCategory="100"
                    android:title="@string/logout" />
            </menu>
        </item>
    </group>
</menu>
