<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".inicisessio.IniciSessio">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:name="com.example.m7_geeco_in.fragments.RetornTop"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="top"
        tools:layout="@layout/fragment_retorn_top" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/logoApp"
            android:name="com.example.m7_geeco_in.fragments.Logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/fragment_logo" />

    </LinearLayout>

    <TextView
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/ISboto"
        android:textColor="@color/md_theme_primary"
        android:textSize="30sp"
        android:textStyle="italic|bold"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/md_theme_tertiaryFixedDim"
        android:padding="20dp"
        android:layout_margin="30dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoNomAdreca"
            android:textColor="#333"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/infoHint"
            android:padding="8dp"
            android:fontFamily="@font/roboto"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoContrassenya"
            android:textColor="#333"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/infoHint"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto"
            android:padding="8dp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/cs_warning"
            android:fontFamily="@font/roboto"
            android:textColor="@color/md_theme_primary"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/md_theme_primary"
        android:paddingLeft="32dp"
        android:fontFamily="@font/roboto"
        android:paddingRight="32dp"
        android:text="@string/ISboto"
        android:textColor="#FFFFFF" />

</LinearLayout>