<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Preferencies">

  <androidx.fragment.app.FragmentContainerView
      android:id="@+id/fragment_top"
      android:name="com.example.m7_geeco_in.RetornTop"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:layout="@layout/fragment_top" />

  <!-- Fragment superior -->
  <androidx.fragment.app.FragmentContainerView
      android:id="@+id/fragment_bottom"
      android:name="com.example.m7_geeco_in.fragment_bottom"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      tools:layout="@layout/fragment_bottom" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:paddingHorizontal="30dp"
      android:paddingVertical="75dp"
      app:layout_constraintBottom_toTopOf="@id/fragment_bottom"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/fragment_top"
      app:layout_constraintVertical_bias="0.0">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:paddingBottom="20dp"
        android:text="@string/preferencies"
        android:textColor="@color/md_theme_onSecondaryContainer"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/daltonisme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/daltonisme"
        android:textColor="@color/md_theme_onTertiaryFixedVariant"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@id/floatingActionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        android:fontFamily="@font/roboto"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/muchotexto"
        android:textColor="@color/md_theme_secondary"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/switch3"
        app:layout_constraintStart_toStartOf="@+id/switch3"
        app:layout_constraintTop_toBottomOf="@+id/switch3"
        android:fontFamily="@font/roboto"/>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/guarda"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6"
        android:fontFamily="@font/roboto"/>

    <Switch
        android:id="@+id/switch2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:shadowColor="@color/md_theme_onSecondaryFixedVariant"
        android:switchMinWidth="50dp"
        android:text="@string/mfosc"
        android:fontFamily="@font/roboto"
        android:textColor="@color/md_theme_onTertiaryFixedVariant"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
        app:layout_constraintStart_toStartOf="@+id/daltonisme"
        app:layout_constraintTop_toBottomOf="@+id/daltonisme"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:checked="false"
        android:gravity="center"
        android:shadowColor="@color/md_theme_onSecondaryFixedVariant"
        android:switchMinWidth="50dp"
        android:fontFamily="@font/roboto"
        android:text="@string/amagardades"
        android:textColor="@color/md_theme_onTertiaryFixedVariant"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
        app:layout_constraintStart_toStartOf="@+id/daltonisme"
        app:layout_constraintTop_toBottomOf="@+id/switch2"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/md_theme_onPrimaryFixedVariant"
        app:layout_constraintEnd_toEndOf="@id/textView2"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/daltonisme"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:srcCompat="@drawable/ic_launcher_foreground" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>